2007-08-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-menu-entry): New var.
	(vc-mode-line-map): Use it so that this menu also uses the extra-menu.
	(menu-bar-tools-menu): Add the VC menu here rather than in menu-bar.el.
	(vc-menu-map): Declare and initialize in one step.
	(vc-menu-map-filter): Move&rename from menu-bar.el:menu-bar-vc-filter

	* menu-bar.el (vc-menu-map): Don't setup any more.
	Instead, just create the proper spot in the menu.

2007-08-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el (smerge-resolve): New arg `safe'.
	(smerge-resolve-all, smerge-batch-resolve): New function.
	(smerge-refine): Make sure `diff' returns the expected result.
	(smerge-parsep-re): New const.
	(smerge-mode): Use it to adjust paragraph-separate.

	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords):
	Correctly match / regexp matchers as first char on a line when
	fontifying only that line.

	* emacs-lisp/cl-macs.el (cl-transform-lambda): Preserve the match-data.

2007-08-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el: Don't fiddle with vc-handled-backend.
	(vc-bzr-registered): Don't redundantly protect against
	file-error.  Actually use the format-specific code.
	(vc-bzr-buffer-nonblank-p): Remove.
	(vc-bzr-status): Change `kindchange' -> `kindchanged'.

2007-08-20  Juri Linkov  <juri@jurta.org>

	* startup.el (fancy-splash-text): Change multiple tabs into one
	tab.  Remove "Useful File menu items" section (with "Exit Emacs"
	and "Recover Crashed Session").
	(fancy-splash-screens): Set tab-width to 22.
	(normal-splash-screen): Replace literal tabs with \t and
	fix whitespace.  Remove "Useful File menu items" section (with
	"Exit Emacs" and "Recover Crashed Session").

2007-08-20  Johannes Weiner  <hannes@saeurebad.de>  (tiny change)

	* emacs-lisp/lisp-mode.el (preceding-sexp): New fun, the code was
	extracted from `eval-last-sexp-1'.
	(eval-last-sexp-1): Call `preceding-sexp'.
